[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst
description = Seamless operability between C++11 and Python
author = Wenzel Jakob
author_email = wenzel.jakob@epfl.ch
url = https://github.com/pybind/pybind11
license = BSD

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: C++
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    C++11
    Python bindings

[options]
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4
zip_safe = False

[bdist_wheel]
universal=1

[check-manifest]
ignore =
    tests/**
    docs/**
    tools/**
    include/**
    .*
    pybind11/include/**
    pybind11/share/**
    CMakeLists.txt


[flake8]
max-line-length = 99
show_source = True
exclude = .git, __pycache__, build, dist, docs, tools, venv
ignore =
    # required for pretty matrix formatting: multiple spaces after `,` and `[`
    E201, E241, W504,
    # camelcase 'cPickle' imported as lowercase 'pickle'
    N813
    # Black conflict
    W503, E203

[mypy]
files = pybind11
python_version = 2.7
warn_unused_configs = True

# Currently (0.800) identical to --strict
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[tool:pytest]
timeout = 300
